--- a/styles/scss/_section-explore.scss
+++ b/styles/scss/_section-explore.scss
@@ -22,7 +22,7 @@
 }
 
 .explore-item__text {
-	width: 350px;
+	width: 21.875rem;
 
 	span {
 		display: block;
@@ -36,21 +36,21 @@
 
 .help__inner {
 	position: relative;
-	padding: 84px 0 33px 0;
+	padding: 5.25rem 0 2.0625rem 0;
 }
 
 .help__title {
-	max-width: 613px;
+	max-width: 38.3125rem;
 	margin: 0 auto;
-	margin-bottom: 262px;
+	margin-bottom: 16.375rem;
 }
 .help__text {
-	max-width: 728px;
+	max-width: 45.5rem;
 }
 
 .background-svg {
 	position: absolute;
-	top: -111px;
+	top: -6.9375rem;
 	left: 0;
 	z-index: 1;
 }
