--- a/styles/scss/_section-lazy-bison.scss
+++ b/styles/scss/_section-lazy-bison.scss
@@ -37,7 +37,7 @@
 }
 
 .lazy-bison-description__text {
-	margin: 24px 0 64px 0;
+	margin: 1.5rem 0 4rem 0;
 }
 
 .lazy-bison__stats {
