--- a/styles/scss/_section-testimonials.scss
+++ b/styles/scss/_section-testimonials.scss
@@ -1,14 +1,14 @@
 .testimonials__inner {
 	.testimonials__title {
-		margin-bottom: 18px;
+		margin-bottom: 1.125rem;
 	}
 
 	.testimonials__gray-line {
-		margin-bottom: 50px;
+		margin-bottom: 3.125rem;
 	}
 
 	.testimonials__subtitle {
-		max-width: 512px;
+		max-width: 32rem;
 	}
 
 	.vertical-gray-line-1,
@@ -20,23 +20,23 @@
 	}
 
 	.vertical-gray-line-1 {
-		max-width: 455px;
-		transform: rotate(90deg) translateY(119px) translateX(174px);
+		max-width: 28.4375rem;
+		transform: rotate(90deg) translateY(7.4375rem) translateX(10.875rem);
 	}
 
 	.vertical-gray-line-2 {
-		width: 455px;
-		transform: rotate(90deg) translateY(-314px) translateX(174px);
+		width: 28.4375rem;
+		transform: rotate(90deg) translateY(-19.625rem) translateX(174px);
 	}
 
 	.vertical-gray-line-3 {
 		width: 275px;
-		transform: rotate(90deg) translateY(-826px) translateX(83px);
+		transform: rotate(90deg) translateY(-51.625rem) translateX(5.1875rem);
 	}
 
 	.vertical-gray-line-4 {
-		width: 557px;
-		transform: rotate(90deg) translateY(-895px) translateX(224px);
+		width: 34.8125rem;
+		transform: rotate(90deg) translateY(-55.9375rem) translateX(14rem);
 	}
 
 	.workers-background {
@@ -49,10 +49,10 @@
 	}
 
 	.workers__list {
-		height: 565px;
+		height: 35.3125rem;
 		display: flex;
 		align-items: stretch;
-		gap: 28px;
+		gap: 1.75rem;
 	}
 
 	.workers__item:nth-child(1) {
@@ -73,17 +73,17 @@
 	}
 
 	.worker-3 {
-		bottom: 52.5px;
+		bottom: 3.2813rem;
 	}
 
 	.worker-4 {
-		top: 52px;
+		top: 3.25rem;
 	}
 
 	.card {
 		position: relative;
-		padding: 92px 22px 44px 22px;
-		width: 404px;
+		padding: 5.75rem 1.375rem 2.75rem 1.375rem;
+		width: 25.25rem;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -93,10 +93,10 @@
 
 	.avatar {
 		position: absolute;
-		top: -78px;
+		top: -4.875rem;
 		bottom: 0;
-		width: 145px;
-		height: 145px;
+		width: 9.0625rem;
+		height: 9.0625rem;
 		margin: 0 auto;
 		border-radius: 50%;
 		overflow: hidden;
@@ -109,61 +109,68 @@
 	}
 
 	.name {
-		font-size: 20px;
+		font-size: 1.25rem;
 		font-weight: 600;
-		line-height: 28px;
+		line-height: 1.75rem;
 		letter-spacing: 0em;
 	}
 
 	.position {
 		text-align: center;
-		font-size: 16px;
+		font-size: 1rem;
 		color: #888888;
 	}
 
 	.description {
-		margin-top: 10px;
-		font-size: 14px;
+		margin-top: 0.625rem;
+		font-size: 0.875rem;
 		line-height: 1.5;
 	}
 
 	.card__content {
-		max-width: 360px;
+		max-width: 22.5rem;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		gap: 10px;
+		gap: 0.625rem;
 	}
 }
 
 .consultation {
 	@include background('/assets/images/casesbg.png', center, no-repeat, cover);
-	padding: 251px 0 120px 0;
+	padding: 15.6875rem 0 120px 0;
 }
 
 .consultation__inner {
+	position: relative;
 	@include background(
 		'/assets/images/consultation-bg.png',
 		center,
 		no-repeat,
 		cover
 	);
-	max-width: 1052px;
-	max-height: 261px;
+	width: 65.75rem;
 	display: flex;
 	flex-direction: column;
 	align-items: end;
-	gap: 42px;
-	padding: 52px 0 39px 0;
+	gap: 2.625rem;
+	padding: 3.25rem 0 2.4375rem 0;
 	margin: 0 auto;
 	color: $color-white;
 }
 
+.consultation__planet-img {
+	position: absolute;
+	z-index: -1;
+	top: -2.9375rem;
+	left: -2.5rem;
+}
+
 .consultation__description {
-	max-width: 582px;
-	margin-right: 62px;
+	max-width: 36.375rem;
+	margin-right: 3.875rem;
 }
 
 .consultation__inner .button {
-	margin-right: 212px;
+	margin-right: 13.25rem;
 }
